crates/cargo-airbender/src/commands/new/snapshots/cargo_airbender__commands__new__tests__new_gpu_backend_generates_real_prover_setup.snap
---
source: crates/cargo-airbender/src/commands/new/mod.rs
expression: rendered
---
=== README.md ===
# hello-airbender

This template contains:

- `.gitignore`: ignores local build artifacts
- `guest/`: Airbender guest program
- `host/`: host-side runner/prover application
- `guest/.cargo/config.toml`: guest target and build flags for local tooling

## Quick Start

Build guest artifacts:

```sh
cd guest
cargo airbender build
```

Run host execution:

```sh
cd ../host
cargo run --release
```

Run host execution + proof:

```sh
cargo run --release -- --prove
```

## Prover Backend

Default prover backend: `gpu`.

`gpu` mode runs real proving and requires a CUDA-capable NVIDIA GPU at runtime. You can compile with `ZKSYNC_USE_CUDA_STUBS=true`, but invoking GPU proving without CUDA setup will panic.

=== host/Cargo.toml ===
[package]
name = "hello-airbender-host"
version = "0.1.0"
edition = "2021"

[dependencies]
airbender-host = { version = "0.1.0" }

# This is required to avoid having to specify `RUST_MIN_STACK` for compilation.
# The reason why this is needed is because these packages are highly optimized, but the optimizations
# make debug information generation more heavy and cause the default stack size to overflow.
# This issue is expected to be resolved later.
[profile.dev.package.keccak_special5]
debug = 0
[profile.dev.package.setups]
debug = 0
[profile.release.package.keccak_special5]
debug = 0
[profile.release.package.setups]
debug = 0
=== host/src/main.rs ===
use airbender_host::{
    Inputs, Program, Prover, ProverLevel, Result, Runner, SecurityLevel, VerificationRequest,
    Verifier,
};
use std::path::PathBuf;

fn main() -> Result<()> {
    let prove = std::env::args().skip(1).any(|arg| arg == "--prove");
    // We assume that the guest program is located in `../guest/dist/app`,
    // which is the default behavior of `cargo airbender build`.
    let dist_dir = PathBuf::from(env!("CARGO_MANIFEST_DIR")).join("../guest/dist/app");
    let program = Program::load(&dist_dir)?;

    let mut inputs = Inputs::new();
    inputs.push(&41u32)?;

    let runner = program.transpiler_runner().build()?;
    let execution = runner.run(inputs.words())?;
    let exec_output = execution.receipt.output[0];
    println!(
        "Execution finished: cycles={}, reached_end={}, output={}",
        execution.cycles_executed, execution.reached_end, exec_output
    );

    if !prove {
        println!("Skipping proof generation (pass `--prove` to generate and verify proof).");
        return Ok(());
    }

    let security = SecurityLevel::default();
    let prover = program
        .gpu_prover()
        .with_security(security)
        .with_level(ProverLevel::RecursionUnified)
        .build()?;
    let prove_result = prover.prove(inputs.words())?;
    let proof_output = prove_result.receipt.output[0];
    println!(
        "Proof generated: cycles={}, output={}",
        prove_result.cycles, proof_output
    );
    assert_eq!(
        exec_output, proof_output,
        "execution and proof output mismatch"
    );

    let expected_output = 42u32;
    let verifier = program.real_verifier(ProverLevel::RecursionUnified).build()?;
    let vk = verifier.generate_vk(security)?;
    verifier.verify(
        &prove_result.proof,
        &vk,
        VerificationRequest::real(&expected_output),
    )?;
    println!("Proof verified.");

    Ok(())
}
